==> tchnit/PN532-ESP-IDF/pn532/pn532.c <==
#include "pn532.h"
#define PN532_PACKBUFFSIZ 64                ///< Packet buffer size in uint8_ts

void wakeup(void) {

    uint8_t wake[3] = {0x55, 0x00, 0x00};
    // pn532_write(wake, 3);
    int len = uart_write_bytes(UART_NUM_P2, (const char*)wake, 3);
// pn532_write(wake, 3)
        if ( len == 3) {
        ESP_LOGI("UART", "Wake Up");
    } else {
        ESP_LOGE("UART", "Failed Wake Up");
    }
    delay(2);
    // vTaskDelay(2000 / portTICK_PERIOD_MS);
  // need to config SAM to stay in Normal Mode
  pn532_SAMConfig();
}

bool sendCommandCheckAck(uint8_t *cmd, uint8_t cmdlen) {
uint16_t timeout=200;

  uint8_t SLOWDOWN = 0;


  // write the command
  writecommand(cmd, cmdlen);
ESP_LOGW("writecommand","writecommand");
  // I2C TUNING
  // delay(SLOWDOWN);

  // Wait for chip to say its ready!
  if (!waitready(timeout)) {
    return false;
  }
ESP_LOGW("waitready","waitready");



  // read acknowledgement
if (!readack()) {
#ifdef PN532DEBUG
    ESP_LOGE("ERROR","No ACK frame received!");
#endif
    return false;
  }
ESP_LOGW("readack","readack");


  // Wait for chip to say its ready!
  if (!waitready(timeout)) {
    return false;
  }
ESP_LOGW("waitready","waitready");

  return true; // ack'd command
}

bool setPassiveActivationRetries(uint8_t maxRetries) {
  pn532_packetbuffer[0] = PN532_COMMAND_RFCONFIGURATION;
  pn532_packetbuffer[1] = 5;    // Config item 5 (MaxRetries)
  pn532_packetbuffer[2] = 0xFF; // MxRtyATR (default = 0xFF)
  pn532_packetbuffer[3] = 0x01; // MxRtyPSL (default = 0x01)
  pn532_packetbuffer[4] = maxRetries;

#ifdef MIFAREDEBUG
  print(F("Setting MxRtyPassiveActivation to "));
  print(maxRetries, DEC);
  ESP_LOGE("ERROR"," ");
#endif

  if (!sendCommandCheckAck(pn532_packetbuffer, 5))
    return 0x0; // no ACK

  return 1;
}

bool readPassiveTargetID(uint8_t cardbaudrate, uint8_t *uid,
                                         uint8_t *uidLength, uint16_t timeout) {
  timeout=0;
  pn532_packetbuffer[0] = PN532_COMMAND_INLISTPASSIVETARGET;
  pn532_packetbuffer[1] = 1; // max 1 cards at once (we can set this to 2 later)
  pn532_packetbuffer[2] = cardbaudrate;

  if (!CommandCheckAck(pn532_packetbuffer, 3, timeout)) {
#ifdef PN532DEBUG
    ESP_LOGE("ERROR","No card(s) read");
#endif
    return 0x0; // no cards read
  }

  return readDetectedPassiveTargetID(uid, uidLength);
}

bool inListPassiveTarget() {
  pn532_packetbuffer[0] = PN532_COMMAND_INLISTPASSIVETARGET;
  pn532_packetbuffer[1] = 1;
  pn532_packetbuffer[2] = 0;

#ifdef PN532DEBUG
  print(F("About to inList passive target"));
#endif

  if (!CommandCheckAck(pn532_packetbuffer, 3, 1000)) {
#ifdef PN532DEBUG
    ESP_LOGE("ERROR","Could not send inlist message");
#endif
    return false;
  }

  if (!waitready(30000)) {
    return false;
  }

  readdata(pn532_packetbuffer, sizeof(pn532_packetbuffer));

  if (pn532_packetbuffer[0] == 0 && pn532_packetbuffer[1] == 0 &&
      pn532_packetbuffer[2] == 0xff) {
    uint8_t length = pn532_packetbuffer[3];
    if (pn532_packetbuffer[4] != (uint8_t)(~length + 1)) {
#ifdef PN532DEBUG
      
      ESP_LOGE("ERROR","Length check invalid");
      println(length, HEX);
      println((~length) + 1, HEX);
#endif
      return false;
    }
    if (pn532_packetbuffer[5] == PN532_PN532TOHOST &&
        pn532_packetbuffer[6] == PN532_RESPONSE_INLISTPASSIVETARGET) {
      if (pn532_packetbuffer[7] != 1) {
#ifdef PN532DEBUG
        ESP_LOGE("ERROR","Unhandled number of targets inlisted");
#endif
        ESP_LOGE("ERROR","Number of tags inlisted:");
        printf("%u \n",pn532_packetbuffer[7]);
        return false;
      }

      int8_t _inListedTag = pn532_packetbuffer[8];
      printf("Tag number: ");
      printf("%d \n",_inListedTag);

      return true;
    } else {
#ifdef PN532DEBUG
      print(F("Unexpected response to inlist passive host"));
#endif
      return false;
    }
  } else {
#ifdef PN532DEBUG
    ESP_LOGE("ERROR","Preamble missing");
#endif
    return false;
  }

  return true;
}

uint8_t mifareclassic_ReadDataBlock(uint8_t blockNumber,
                                                    uint8_t *data) {
#ifdef MIFAREDEBUG
  print(F("Trying to read 16 bytes from block "));
  println(blockNumber);
#endif

  /* Prepare the command */
  pn532_packetbuffer[0] = PN532_COMMAND_INDATAEXCHANGE;
  pn532_packetbuffer[1] = 1;               /* Card number */
  pn532_packetbuffer[2] = MIFARE_CMD_READ; /* Mifare Read command = 0x30 */
  pn532_packetbuffer[3] =
      blockNumber; /* Block Number (0..63 for 1K, 0..255 for 4K) */

  /* Send the command */
  if (!sendCommandCheckAck(pn532_packetbuffer, 4)) {
#ifdef MIFAREDEBUG
    ESP_LOGE("ERROR","Failed to receive ACK for read command");
#endif
    return 0;
  }

  /* Read the response packet */
  readdata(pn532_packetbuffer, 26);

  /* If byte 8 isn't 0x00 we probably have an error */
  if (pn532_packetbuffer[7] != 0x00) {
#ifdef MIFAREDEBUG
    ESP_LOGE("ERROR","Unexpected response");
    PrintHexChar(pn532_packetbuffer, 26);
#endif
    return 0;
  }

  /* Copy the 16 data bytes to the output buffer        */
  /* Block content starts at byte 9 of a valid response */
  memcpy(data, pn532_packetbuffer + 8, 16);

/* Display data for debug if requested */
#ifdef MIFAREDEBUG
  print(F("Block "));
  println(blockNumber);
  PrintHexChar(data, 16);
#endif

  return 1;
}

uint8_t mifareclassic_WriteDataBlock(uint8_t blockNumber,
                                                     uint8_t *data) {
#ifdef MIFAREDEBUG
  print(F("Trying to write 16 bytes to block "));
  println(blockNumber);
#endif

  /* Prepare the first command */
  pn532_packetbuffer[0] = PN532_COMMAND_INDATAEXCHANGE;
  pn532_packetbuffer[1] = 1;                /* Card number */
  pn532_packetbuffer[2] = MIFARE_CMD_WRITE; /* Mifare Write command = 0xA0 */
  pn532_packetbuffer[3] =
      blockNumber; /* Block Number (0..63 for 1K, 0..255 for 4K) */
  memcpy(pn532_packetbuffer + 4, data, 16); /* Data Payload */

  /* Send the command */
  if (!sendCommandCheckAck(pn532_packetbuffer, 20)) {
#ifdef MIFAREDEBUG
    ESP_LOGE("ERROR","Failed to receive ACK for write command");
#endif
    return 0;
  }
  delay(10);

  /* Read the response packet */
  readdata(pn532_packetbuffer, 26);

  return 1;
}

uint8_t mifareultralight_ReadPage(uint8_t page,
                                                  uint8_t *buffer) {
  if (page >= 64) {
#ifdef MIFAREDEBUG
    ESP_LOGE("ERROR","Page value out of range");
#endif
    return 0;
  }

#ifdef MIFAREDEBUG
  print(F("Reading page "));
  println(page);
#endif

  /* Prepare the command */
  pn532_packetbuffer[0] = PN532_COMMAND_INDATAEXCHANGE;
  pn532_packetbuffer[1] = 1;               /* Card number */
  pn532_packetbuffer[2] = MIFARE_CMD_READ; /* Mifare Read command = 0x30 */
  pn532_packetbuffer[3] = page; /* Page Number (0..63 in most cases) */

  /* Send the command */
  if (!sendCommandCheckAck(pn532_packetbuffer, 4)) {
#ifdef MIFAREDEBUG
    ESP_LOGE("ERROR","Failed to receive ACK for write command");
#endif
    return 0;
  }

  /* Read the response packet */
  readdata(pn532_packetbuffer, 26);
#ifdef MIFAREDEBUG
  ESP_LOGE("ERROR","Received: ");
  PrintHexChar(pn532_packetbuffer, 26);
#endif

  /* If byte 8 isn't 0x00 we probably have an error */
  if (pn532_packetbuffer[7] == 0x00) {
    /* Copy the 4 data bytes to the output buffer         */
    /* Block content starts at byte 9 of a valid response */
    /* Note that the command actually reads 16 byte or 4  */
    /* pages at a time ... we simply discard the last 12  */
    /* bytes                                              */
    memcpy(buffer, pn532_packetbuffer + 8, 4);
  } else {
#ifdef MIFAREDEBUG
    ESP_LOGE("ERROR","Unexpected response reading block: ");
    PrintHexChar(pn532_packetbuffer, 26);
#endif
    return 0;
  }

/* Display data for debug if requested */
#ifdef MIFAREDEBUG
  print(F("Page "));
  print(page);
  ESP_LOGE("ERROR",":");
  PrintHexChar(buffer, 4);
#endif

  // Return OK signal
  return 1;
}

uint8_t mifareultralight_WritePage(uint8_t page,
                                                   uint8_t *data) {

  if (page >= 64) {
#ifdef MIFAREDEBUG
    ESP_LOGE("ERROR","Page value out of range");
#endif
    // Return Failed Signal
    return 0;
  }

#ifdef MIFAREDEBUG
  print(F("Trying to write 4 byte page"));
  println(page);
#endif

  /* Prepare the first command */
  pn532_packetbuffer[0] = PN532_COMMAND_INDATAEXCHANGE;
  pn532_packetbuffer[1] = 1; /* Card number */
  pn532_packetbuffer[2] =
      MIFARE_ULTRALIGHT_CMD_WRITE; /* Mifare Ultralight Write command = 0xA2 */
  pn532_packetbuffer[3] = page;    /* Page Number (0..63 for most cases) */
  memcpy(pn532_packetbuffer + 4, data, 4); /* Data Payload */

  /* Send the command */
  if (!sendCommandCheckAck(pn532_packetbuffer, 8)) {
#ifdef MIFAREDEBUG
    ESP_LOGE("ERROR","Failed to receive ACK for write command");
#endif

    // Return Failed Signal
    return 0;
  }
  delay(10);

  /* Read the response packet */
  readdata(pn532_packetbuffer, 26);

  // Return OK Signal
  return 1;
}

uint8_t ntag2xx_ReadPage(uint8_t page, uint8_t *buffer) {
  // TAG Type       PAGES   USER START    USER STOP
  // --------       -----   ----------    ---------
  // NTAG 203       42      4             39
  // NTAG 213       45      4             39
  // NTAG 215       135     4             129
  // NTAG 216       231     4             225

  if (page >= 231) {
#ifdef MIFAREDEBUG
    ESP_LOGE("ERROR","Page value out of range");
#endif
    return 0;
  }

#ifdef MIFAREDEBUG
  print(F("Reading page "));
  println(page);
#endif

  /* Prepare the command */
  pn532_packetbuffer[0] = PN532_COMMAND_INDATAEXCHANGE;
  pn532_packetbuffer[1] = 1;               /* Card number */
  pn532_packetbuffer[2] = MIFARE_CMD_READ; /* Mifare Read command = 0x30 */
  pn532_packetbuffer[3] = page; /* Page Number (0..63 in most cases) */

  /* Send the command */
  if (!sendCommandCheckAck(pn532_packetbuffer, 4)) {
#ifdef MIFAREDEBUG
    ESP_LOGE("ERROR","Failed to receive ACK for write command");
#endif
    return 0;
  }

  /* Read the response packet */
  readdata(pn532_packetbuffer, 26);
#ifdef MIFAREDEBUG
  ESP_LOGE("ERROR","Received: ");
  PrintHexChar(pn532_packetbuffer, 26);
#endif

  /* If byte 8 isn't 0x00 we probably have an error */
  if (pn532_packetbuffer[7] == 0x00) {
    /* Copy the 4 data bytes to the output buffer         */
    /* Block content starts at byte 9 of a valid response */
    /* Note that the command actually reads 16 byte or 4  */
    /* pages at a time ... we simply discard the last 12  */
    /* bytes                                              */
    memcpy(buffer, pn532_packetbuffer + 8, 4);
  } else {
#ifdef MIFAREDEBUG
    ESP_LOGE("ERROR","Unexpected response reading block: ");
    PrintHexChar(pn532_packetbuffer, 26);
#endif
    return 0;
  }

/* Display data for debug if requested */
#ifdef MIFAREDEBUG
  print(F("Page "));
  print(page);
  ESP_LOGE("ERROR",":");
  PrintHexChar(buffer, 4);
#endif

  // Return OK signal
  return 1;
}

uint8_t ntag2xx_WritePage(uint8_t page, uint8_t *data) {
  // TAG Type       PAGES   USER START    USER STOP
  // --------       -----   ----------    ---------
  // NTAG 203       42      4             39
  // NTAG 213       45      4             39
  // NTAG 215       135     4             129
  // NTAG 216       231     4             225

  if ((page < 4) || (page > 225)) {
#ifdef MIFAREDEBUG
    ESP_LOGE("ERROR","Page value out of range");
#endif
    // Return Failed Signal
    return 0;
  }

#ifdef MIFAREDEBUG
  print(F("Trying to write 4 byte page"));
  println(page);
#endif

  /* Prepare the first command */
  pn532_packetbuffer[0] = PN532_COMMAND_INDATAEXCHANGE;
  pn532_packetbuffer[1] = 1; /* Card number */
  pn532_packetbuffer[2] =
      MIFARE_ULTRALIGHT_CMD_WRITE; /* Mifare Ultralight Write command = 0xA2 */
  pn532_packetbuffer[3] = page;    /* Page Number (0..63 for most cases) */
  memcpy(pn532_packetbuffer + 4, data, 4); /* Data Payload */

  /* Send the command */
  if (!sendCommandCheckAck(pn532_packetbuffer, 8)) {
#ifdef MIFAREDEBUG
    ESP_LOGE("ERROR","Failed to receive ACK for write command");
#endif

    // Return Failed Signal
    return 0;
  }
  delay(10);

  /* Read the response packet */
  readdata(pn532_packetbuffer, 26);

  // Return OK Signal
  return 1;
}

void readdata(uint8_t *buff, uint8_t len) {
    // readBytes(buff, n);
  // uart_read_bytes(UART_NUM,&buff, len,portMAX_DELAY);
  // pn532_read(buff,len);
    uart_read_bytes(UART_NUM_P2,buff, len,portMAX_DELAY);

  
#ifdef PN532DEBUG
  print(F("Reading: "));
  for (uint8_t i = 0; i < n; i++) {
    print(F(" 0x"));
    print(buff[i], HEX);
  }
  println();
#endif
}

void writecommand(uint8_t *cmd, uint8_t cmdlen) {
    // I2C or Serial command write.
    uint8_t packet[8 + cmdlen];
    uint8_t LEN = cmdlen + 1;

    packet[0] = PN532_PREAMBLE;
    packet[1] = PN532_STARTCODE1;
    packet[2] = PN532_STARTCODE2;
    packet[3] = LEN;
    packet[4] = ~LEN + 1;
    packet[5] = PN532_HOSTTOPN532;
    uint8_t sum = 0;
    for (uint8_t i = 0; i < cmdlen; i++) {
      packet[6 + i] = cmd[i];
      sum += cmd[i];
    }
    packet[6 + cmdlen] = ~(PN532_HOSTTOPN532 + sum) + 1;
    packet[7 + cmdlen] = PN532_POSTAMBLE;

// #ifdef PN532DEBUG
    printf("Sending : ");
    for (int i = 1; i < 8 + cmdlen; i++) {
      printf("0x");
      printf("%u",packet[i]);
      printf(", ");
    }
    printf("\n");
// #endif

  // int len = pn532_write(packet, 8 + cmdlen);
  int len = uart_write_bytes(UART_NUM_P2, (const char*)packet, 8+cmdlen);
  if (len == 8 + cmdlen) {
        ESP_LOGI("UART", "pn532_write");
    } else {
        ESP_LOGE("ERROR", "pn532_write");
    }
  
}
